--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
-      /* Force consistent font and hide scrollbars */
       * {
         font-family: 'Inter', sans-serif !important;
         -webkit-tap-highlight-color: transparent;
@@ -30,7 +29,7 @@
       }
       
       body {
-        background-color: #050a18; /* Dark Navy Background */
+        background-color: #050a18; /* Dark Navy Background conforme a imagem */
         overscroll-behavior-y: contain;
         color: #ffffff;
       }
@@ -50,24 +49,20 @@
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
       }
-
-      .gold-gradient-text {
-        background: linear-gradient(to right, #fde047, #eab308);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
     </style>
   <script type="importmap">
 {
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "lucide-react": "https://esm.sh/lucide-react@0.474.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react": "https://esm.sh/react@^19.0.0",
+    "react-dom": "https://esm.sh/react-dom@^19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@^19.0.0/client",
     "firebase/app": "https://esm.sh/firebase@11.1.0/app",
     "firebase/analytics": "https://esm.sh/firebase@11.1.0/analytics",
     "firebase/messaging": "https://esm.sh/firebase@11.1.0/messaging",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
     "firebase/": "https://esm.sh/firebase@^12.7.0/"
   }
 }
