--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       }
       
       body {
-        background-color: #050a18; /* Dark Navy Background conforme a imagem */
+        background-color: #050a18;
         overscroll-behavior-y: contain;
         color: #ffffff;
       }
@@ -53,14 +53,14 @@
   <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "lucide-react": "https://esm.sh/lucide-react@0.474.0",
-    "react": "https://esm.sh/react@^19.0.0",
-    "react-dom": "https://esm.sh/react-dom@^19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@^19.0.0/client",
-    "firebase/app": "https://esm.sh/firebase@11.1.0/app",
-    "firebase/analytics": "https://esm.sh/firebase@11.1.0/analytics",
-    "firebase/messaging": "https://esm.sh/firebase@11.1.0/messaging",
+    "@google/genai": "https://esm.sh/@google/genai@1.34.0",
+    "firebase/app": "https://esm.sh/firebase@11.2.0/app",
+    "firebase/analytics": "https://esm.sh/firebase@11.2.0/analytics",
+    "firebase/messaging": "https://esm.sh/firebase@11.2.0/messaging",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
     "firebase/": "https://esm.sh/firebase@^12.7.0/"
