fix: Improve service worker registration and Firebase initialisation
Enhance the service worker registration logic in `index.html` to handle potential origin errors in sandboxed environments and include a fallback mechanism.

In `services/firebase.ts`, refine the initialization of analytics and messaging to avoid redundant checks and improve error handling, ensuring they are only initialized when supported and on the client-side. Update the messaging permission check to be more robust.

--- a/index.html
+++ b/index.html
@@ -73,9 +73,22 @@
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js', { scope: '/' })
-            .then(reg => console.log('SW registered:', reg.scope))
-            .catch(err => console.log('SW reg error:', err));
+          // Attempting to register using a clean relative path to avoid origin errors in sandboxed environments.
+          navigator.serviceWorker.register('sw.js')
+            .then(reg => {
+              console.log('✅ Service Worker registered with scope:', reg.scope);
+            })
+            .catch(err => {
+              console.error('❌ Service Worker registration failed:', err);
+              // Fallback: Try building an absolute URL from current origin if relative path fails.
+              try {
+                const absoluteSwUrl = new URL('sw.js', window.location.origin + window.location.pathname).href;
+                console.warn('Attempting fallback registration with:', absoluteSwUrl);
+                navigator.serviceWorker.register(absoluteSwUrl);
+              } catch (fallbackErr) {
+                console.error('❌ Fallback registration also failed');
+              }
+            });
         });
       }
     </script>
