--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
@@ -50,7 +49,7 @@
         -moz-osx-font-smoothing: grayscale;
       }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@19.0.0",
@@ -67,26 +66,16 @@
   }
 }
 </script>
-</head>
+  </head>
   <body class="overflow-x-hidden">
     <div id="root"></div>
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          // Robust Service Worker registration for sandboxed environments.
-          // Using window.location.href as the base to resolve sw.js ensures it always matches the current origin.
-          try {
-            const swUrl = new URL('./sw.js', window.location.href).href;
-            navigator.serviceWorker.register(swUrl)
-              .then(reg => {
-                console.log('✅ Service Worker registered with scope:', reg.scope);
-              })
-              .catch(err => {
-                console.error('❌ Service Worker registration failed:', err);
-              });
-          } catch (e) {
-            console.error('❌ Error constructing SW URL:', e);
-          }
+          // Standard relative registration avoids origin mismatch in sandboxed usercontent environments.
+          navigator.serviceWorker.register('sw.js')
+            .then(reg => console.log('✅ SW Registrado:', reg.scope))
+            .catch(err => console.error('❌ Erro SW:', err));
         });
       }
     </script>
