feat: Initialize FOCO with React and Gemini integration
This commit sets up the initial project structure for FOCO, André's AI-powered productivity app.

Key changes include:
- Upgrading React to version 19.0.0.
- Integrating Gemini 3 Flash via `@google/genai` for AI-driven motivational messages.
- Setting up Firebase for potential future analytics and messaging features.
- Refactoring the application entry point to `index.js`.
- Implementing basic UI components and state management in `App.js`.
- Adding a `vercel.json` configuration for Vercel deployment.
- Modifying `index.html` for service worker registration and script loading.
- Initializing categories and tasks within `App.js`.
- Adding a `TaskCard` component for displaying tasks.
- Implementing services for Firebase (`services/firebase.js`) and Gemini (`services/gemini.js`).
- The `getNaggingMessage` function in `services/gemini.js` provides the core AI motivation.
- Added `getTaskInsight` for task-specific AI tips.
- Added `requestNotificationPermission` to `services/firebase.js`.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
     "firebase/analytics": "https://esm.sh/firebase@11.2.0/analytics",
     "firebase/messaging": "https://esm.sh/firebase@11.2.0/messaging",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
     "firebase/": "https://esm.sh/firebase@^12.7.0/"
   }
 }
@@ -72,13 +71,14 @@
   </head>
   <body class="overflow-x-hidden">
     <div id="root"></div>
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="index.js"></script>
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('sw.js')
-            .then(reg => console.log('✅ Service Worker Ativo:', reg.scope))
-            .catch(err => console.warn('❌ Erro no SW:', err.message));
+          // Use caminho absoluto conforme solicitado
+          navigator.serviceWorker.register('/sw.js')
+            .then(reg => console.log('✅ Service Worker Registrado:', reg.scope))
+            .catch(err => console.log('❌ SW Error:', err));
         });
       }
     </script>
