--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>FOCO - André's Task Master</title>
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/manifest.json">
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/3593/3593505.png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -51,34 +51,31 @@
         -moz-osx-font-smoothing: grayscale;
       }
     </style>
-    
-    <script type="importmap">
+  <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "lucide-react": "https://esm.sh/lucide-react@0.474.0",
-    "@google/genai": "https://esm.sh/@google/genai@1.34.0",
-    "firebase/app": "https://esm.sh/firebase@11.2.0/app",
-    "firebase/analytics": "https://esm.sh/firebase@11.2.0/analytics",
-    "firebase/messaging": "https://esm.sh/firebase@11.2.0/messaging",
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "firebase/": "https://esm.sh/firebase@^12.7.0/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "firebase/": "https://esm.sh/firebase@^12.7.0/",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
-  </head>
+</head>
   <body class="overflow-x-hidden">
     <div id="root"></div>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="/index.tsx"></script>
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          // Use caminho absoluto conforme solicitado
-          navigator.serviceWorker.register('/sw.js')
-            .then(reg => console.log('✅ Service Worker Registrado:', reg.scope))
-            .catch(err => console.log('❌ SW Error:', err));
+          // Uso de caminho relativo './sw.js' para evitar erro de origem cruzada
+          navigator.serviceWorker.register('./sw.js')
+            .then(reg => console.log('✅ Service Worker Ativo'))
+            .catch(err => console.warn('⚠️ SW falhou (isso é normal em modo preview/dev):', err.message));
         });
       }
     </script>
