--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     
+    <script>
+      // Shim para evitar erro 'process is not defined' em bibliotecas que esperam Node.js environment
+      window.process = window.process || { env: { NODE_ENV: 'production' } };
+      
+      // Captura erros globais para debug em mobile
+      window.onerror = function(msg, url, line, col, error) {
+        console.error("Global Error:", msg, error);
+      };
+    </script>
+
     <style>
       * {
         font-family: 'Inter', sans-serif !important;
@@ -51,7 +61,7 @@
         -moz-osx-font-smoothing: grayscale;
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
