feat: Enhance PWA capabilities and manifest
Updates the service worker to cache essential assets and implement a stale-while-revalidate strategy for better offline performance. Enhances the manifest.json with updated metadata, icons, and color schemes. Modifies the service worker registration in index.html to be more robust. Refactors Firebase service exports to be safer and includes a robust notification permission request mechanism.

--- a/index.html
+++ b/index.html
@@ -89,16 +89,13 @@
               window.location.hostname.match(/^127(?:\.(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)){3}$/)
             );
 
-            if (window.location.protocol === 'https:' || isLocalhost) {
-               navigator.serviceWorker.register('/sw.js')
-                .then(reg => console.log('✅ SW'))
-                .catch(err => {
-                  if (!err.message.includes('origin')) {
-                    console.warn('SW Info:', err.message);
-                  }
-                });
-            }
-          } catch (e) {}
+            // Register SW in production or localhost
+            navigator.serviceWorker.register('/sw.js')
+              .then(reg => console.log('✅ SW Registered'))
+              .catch(err => console.warn('SW Register Failed:', err));
+          } catch (e) {
+            console.error('SW Error:', e);
+          }
         });
       }
     </script>
