--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
   <script type="importmap">
 {
   "imports": {
-    "firebase/": "https://esm.sh/firebase@^12.7.0/",
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
+    "firebase/": "https://esm.sh/firebase@^12.7.0/"
   }
 }
 </script>
@@ -69,13 +69,13 @@
   <body class="overflow-x-hidden">
     <div id="root"></div>
     <script>
-      // O index.tsx é importado automaticamente pelo sistema.
-      // Registro do Service Worker
+      // O sistema importa o index.tsx automaticamente. 
+      // Não remova este script de registro do SW
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js')
-            .then(reg => console.log('✅ SW Registrado:', reg.scope))
-            .catch(err => console.error('❌ Erro SW:', err));
+          navigator.serviceWorker.register('/sw.js', { scope: '/' })
+            .then(reg => console.log('✅ Service Worker Ativo:', reg.scope))
+            .catch(err => console.error('❌ Erro no Service Worker:', err));
         });
       }
     </script>
