--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
   <body class="overflow-x-hidden">
     <div id="root"></div>
     <script>
-      // Registro do Service Worker usando caminho relativo para evitar erro de Origin Mismatch no Sandbox
+      // Registro do Service Worker usando caminho relativo
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
           navigator.serviceWorker.register('./sw.js')
             .then(reg => {
-              console.log('✅ Service Worker Registrado');
+              console.log('✅ Service Worker Ativo');
               if (reg.waiting) {
                 reg.waiting.postMessage({ type: 'SKIP_WAITING' });
               }
             })
             .catch(err => {
-              console.warn('⚠️ Erro SW (Normal em ambiente de desenvolvimento):', err.message);
+              console.warn('⚠️ Service Worker desativado no ambiente de preview.');
             });
         });
       }
